Extra feature - get(all)Rooms & get(all)Persons
